--- a/packages/snaptdout/package.json
+++ b/packages/snaptdout/package.json
@@ -1,10 +1,11 @@
 {
   "name": "@applitools/snaptdout",
-  "version": "1.5.4",
+  "version": "1.0.0",
   "description": "simple stdout snaptshot testing",
   "main": "index.js",
   "scripts": {
-    "test": "mocha tests/"
+    "test": "mocha tests/",
+    "print": "node -e 'Object.values(require(`./tests/snapshots/stdout.test.json`)).forEach(i => console.log(i.join(`\n`)))'"
   },
   "keywords": [
     "snapshot-testing",
@@ -25,11 +26,8 @@
     "url": "https://github.com/applitools/snaptdout/issues"
   },
   "devDependencies": {
-    "chartscii": "^1.2.3",
+    "@applitools/sdk-release-kit": "^0.13.0",
     "mocha": "^8.2.1"
   },
-  "dependencies": {
-    "puppeteer": "^5.5.0",
-    "xterm": "^4.9.0"
-  }
+  "dependencies": {}
 }
