Reset color in Cypress error message (#393)
* cypress: reset color of error message

* fix: add colors to url

* chore: adding snaptdout

* chore: public snaptdout

* fix: adding url to header

* fix: url space

* fix: space after digest

Co-authored-by: Tal Hayut <tal.hayut@applitools.com>

--- a/packages/snaptdout/package.json
+++ b/packages/snaptdout/package.json
@@ -29,5 +29,7 @@
     "@applitools/sdk-release-kit": "^0.13.0",
     "mocha": "^8.2.1"
   },
-  "dependencies": {}
+  "dependencies": {
+    "@applitools/snaptdout": "^1.0.1"
+  }
 }
