--- a/packages/eyes-cypress/package.json
+++ b/packages/eyes-cypress/package.json
@@ -40,7 +40,7 @@
   "dependencies": {
     "@applitools/dom-snapshot": "4.4.11",
     "@applitools/functional-commons": "1.6.0",
-    "@applitools/snaptdout": "^1.0.0",
+    "@applitools/snaptdout": "1.0.1",
     "@applitools/visual-grid-client": "15.5.22",
     "body-parser": "1.19.0",
     "chalk": "3.0.0",
