--- a/packages/eyes-testcafe/package.json
+++ b/packages/eyes-testcafe/package.json
@@ -14,7 +14,10 @@
     "render": "node ../sdk-shared/src/render.js",
     "test": "yarn test:it",
     "test:unit": "mocha --no-timeouts ./test/unit/*.spec.js",
-    "test:it": "testcafe chrome:headless test/it",
+    "test:it:chrome": "testcafe chrome test/it/spec-driver.spec.js",
+    "test:it:firefox:headless": "testcafe firefox:headless test/it/spec-driver.spec.js",
+    "test:it:firefox": "testcafe firefox test/it/spec-driver.spec.js",
+    "test:it": "testcafe chrome:headless test/it && yarn test:it:chrome && yarn test:it:firefox:headless && yarn test:it:firefox",
     "test:spec": "testcafe chrome:headless ./test/it/spec-driver.spec.js",
     "test:api": "testcafe chrome:headless ./test/it/legacy-api.spec.js",
     "run:testcafe:10": "./node_modules/testcafe-10/bin/testcafe-with-v8-flag-filter.js",
@@ -52,7 +55,7 @@
   },
   "license": "SEE LICENSE IN LICENSE",
   "dependencies": {
-    "@applitools/eyes-sdk-core": "12.14.7",
+    "@applitools/eyes-sdk-core": "12.14.10",
     "@applitools/visual-grid-client": "15.5.20",
     "rimraf": "3.0.2"
   },
@@ -77,7 +80,7 @@
     "testcafe-7": "npm:testcafe@1.7.1",
     "testcafe-8": "npm:testcafe@1.8.8",
     "testcafe-9": "npm:testcafe@1.9.4",
-    "testcafe-browser-provider-saucelabs": "^1.8.0",
+    "testcafe-browser-provider-browserstack": "^1.13.2-alpha.1",
     "uuid": "^8.3.2"
   },
   "engines": {
