tc: make test:it only run headless tests

--- a/packages/eyes-testcafe/package.json
+++ b/packages/eyes-testcafe/package.json
@@ -17,7 +17,8 @@
     "test:it:chrome": "testcafe chrome test/it/spec-driver.spec.js",
     "test:it:firefox:headless": "testcafe firefox:headless test/it/spec-driver.spec.js",
     "test:it:firefox": "testcafe firefox test/it/spec-driver.spec.js",
-    "test:it": "testcafe chrome:headless test/it && yarn test:it:chrome && yarn test:it:firefox:headless && yarn test:it:firefox",
+    "test:it": "testcafe chrome:headless test/it && yarn test:it:firefox:headless",
+    "test:it:full": "testcafe chrome:headless test/it && yarn test:it:chrome && yarn test:it:firefox:headless && yarn test:it:firefox",
     "test:spec": "testcafe chrome:headless ./test/it/spec-driver.spec.js",
     "test:api": "testcafe chrome:headless ./test/it/legacy-api.spec.js",
     "run:testcafe:10": "./node_modules/testcafe-10/bin/testcafe-with-v8-flag-filter.js",
