--- a/packages/sdk-fake-eyes-server/package.json
+++ b/packages/sdk-fake-eyes-server/package.json
@@ -45,8 +45,7 @@
     "filenamify": "4.1.0",
     "node-fetch": "2.6.0",
     "ua-parser-js": "0.7.21",
-    "uuid": "3.3.3",
-    "zlib": "1.0.5"
+    "uuid": "3.3.3"
   },
   "devDependencies": {
     "@applitools/sdk-release-kit": "^0.3.1",
