--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -28,8 +28,8 @@ jobs:
         with:
           name: coverage-tests-metadata.json
           path: |
-            coverage-tests-metadata.json
-            coverage-test-report.xml
+            "./packages/${{github.event.inputs.name}}/coverage-tests-metadata.json"
+            "./packages/${{github.event.inputs.name}}/coverage-test-report.xml"
     env:
       CVG_TESTS_REMOTE: http://localhost:4444/wd/hub
       APPLITOOLS_API_KEY_SDK: ${{secrets.APPLITOOLS_API_KEY_SDK}}
