--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -21,15 +21,17 @@ jobs:
           echo "::group::test ${{github.event.inputs.name}}"
             cd "packages/${{github.event.inputs.name}}"
             yarn
-            yarn prepublish:setup
-            yarn coverage:sandbox
+            echo hello >> hello.txt
+            # yarn prepublish:setup
+            # yarn coverage:sandbox
           echo "::endgroup::"
       - uses: actions/upload-artifact@v2
         with:
           name: coverage-tests-metadata.json
           path: |
-            "./packages/${{github.event.inputs.name}}/coverage-tests-metadata.json"
-            "./packages/${{github.event.inputs.name}}/coverage-test-report.xml"
+            "packages/${{github.event.inputs.name}}/hello.txt"
+            "packages/${{github.event.inputs.name}}/coverage-tests-metadata.json"
+            "packages/${{github.event.inputs.name}}/coverage-test-report.xml"
     env:
       CVG_TESTS_REMOTE: http://localhost:4444/wd/hub
       APPLITOOLS_API_KEY_SDK: ${{secrets.APPLITOOLS_API_KEY_SDK}}
