--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -62,6 +62,7 @@ jobs:
       - uses: actions/upload-artifact@v2
         with:
           name: coverage-tests-report
+          retention-days: 30
           path: |
             packages/${{github.event.inputs.name}}/coverage-tests-metadata.json
             packages/${{github.event.inputs.name}}/coverage-test-report.xml
