--- a/packages/eyes-images/package.json
+++ b/packages/eyes-images/package.json
@@ -35,6 +35,7 @@
   },
   "devDependencies": {
     "@applitools/sdk-release-kit": "^0.13.0",
+    "@applitools/sdk-shared": "^0.8.8",
     "assert-rejects": "^1.0.0",
     "axios": "^0.21.1",
     "eslint": "^7.9.0",
