chore: add npmrc to changelog action

--- a/.github/workflows/changelog.yml
+++ b/.github/workflows/changelog.yml
@@ -14,6 +14,7 @@ jobs:
         with:
           node-version: 14
       - run: |
+          echo "//registry.npmjs.org/:_authToken=${NODE_AUTH_TOKEN}" > .npmrc
           cd packages/
           packages=$(git diff HEAD~ --name-only | cut -d "/" -f 2 | uniq)
           for package in $packages; do
