--- a/.github/workflows/changelog.yml
+++ b/.github/workflows/changelog.yml
@@ -5,6 +5,7 @@ on: pull_request
 jobs:
   changelog:
     runs-on: ubuntu-latest
+    if: "!contains(github.event.head_commit.message, 'Bump')"
     name: changelog
     steps:
       - uses: actions/checkout@v2
