feat(eyes-storybook): fake ie (#421)
* chore: add e2e test for fake IE

* fix: lint fix

* chore: comments for guidance

* chore: comments for guidance

* feat: WIP fake ie in storybook

* wip: fake ie in storybook

* wip: fake ie in storybook

* wip: no await

* fix: reinsert spinner

* wip: fake ie

* wip: fake ie page

* fix: add pool drain and fix tests

* fix: fixing tests

* chore: adding executeRenders test

* chore: fix page pool drain

* chore: add warning message tests

* fix: fix e2e and add console cleanup

* fix: final test fixes

* fix: PR comments

* fix: fix removeAndAddPage

* fix: no nested if

* fix: port left open

* chore: validate output when ie provided with no flag

* fix: PR comments and refactor

* fix: updated executeRenders test

* fix: fix executeRenders test

* fix: add transition logic

* fix: minor cleanup

* fix: closeBatch and refill pool

* fix: err handling in eyesStorybook

* docs: add readme section about fake IE

* docs: add index entry

--- a/packages/eyes-storybook/.eslintignore
+++ b/packages/eyes-storybook/.eslintignore
@@ -6,5 +6,6 @@ test/fixtures/crossOriginIframeStorybook
 test/fixtures/jsLayoutStorybook
 test/fixtures/jsLayoutStorybookLocal
 test/fixtures/customFont
+test/fixtures/fakeIE
 dist
 logs
