--- a/packages/eyes-storybook/package.json
+++ b/packages/eyes-storybook/package.json
@@ -98,7 +98,7 @@
     "react-dom": "^16.12.0",
     "rollup": "^1.28.0",
     "rollup-plugin-commonjs": "^10.1.0",
-    "strip-ansi": "^6.0.0",
+    "strip-ansi": "6",
     "ua-parser-js": "^0.7.21"
   },
   "husky": {
