--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -75,4 +75,5 @@ jobs:
       SAUCE_USERNAME: ${{secrets.SAUCE_USERNAME}}
       NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
       AZURE_STORAGE_CONNECTION_STRING: ${{secrets.AZURE_STORAGE_CONNECTION_STRING}}
-      FORCE_COLOR: 2  
+      FORCE_COLOR: 2
+      TERM: xterm256
