--- a/.github/workflows/test-custom.yml
+++ b/.github/workflows/test-custom.yml
@@ -1,14 +1,13 @@
-
 name: yarn test a package
 
 on:
   workflow_dispatch:
     inputs:
       name:
-        description: "name"
+        description: 'name'
         required: true
       command:
-        description: "custom yarn command (test:it, test:unit..)"
+        description: 'custom yarn command (test:it, test:unit..)'
         required: true
 jobs:
   test:
@@ -36,3 +35,4 @@ jobs:
       SAUCE_USERNAME: ${{secrets.SAUCE_USERNAME}}
       NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
       AZURE_STORAGE_CONNECTION_STRING: ${{secrets.AZURE_STORAGE_CONNECTION_STRING}}
+      STDOUT_LEVEL: 1
