fix(eyes-storybook): no browser config storybook (#588)
* fix: fixing no config browser scenario

* chore: changelog

* fix: fixing eyesStorybook test

* fix: updating ci scripts

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -75,3 +75,4 @@ jobs:
       SAUCE_USERNAME: ${{secrets.SAUCE_USERNAME}}
       NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
       AZURE_STORAGE_CONNECTION_STRING: ${{secrets.AZURE_STORAGE_CONNECTION_STRING}}
+      STDOUT_LEVEL: 1
