--- a/packages/eyes-storybook/package.json
+++ b/packages/eyes-storybook/package.json
@@ -14,7 +14,7 @@
     "eyes-storybook": "./bin/eyes-storybook.js"
   },
   "scripts": {
-    "test": "yarn build && yarn test:mocha && yarn lint",
+    "test": "STDOUT_LEVEL=1 yarn build && yarn test:mocha && yarn lint",
     "test:mocha": "mocha --no-timeouts --trace-warnings 'test/unit/*.test.js' 'test/it/*.test.js' 'test/e2e/*.test.js'",
     "test:unit": "mocha --no-timeouts --trace-warnings 'test/unit/*.test.js'",
     "test:it": "mocha --no-timeouts --trace-warnings 'test/it/*.test.js'",
