--- a/.github/actions/setup-matrix/action.yml
+++ b/.github/actions/setup-matrix/action.yml
@@ -1,7 +1,7 @@
 name: 'Setup matrix'
 inputs:
   sdks:
-    description: 'comma-separated list of sdk names (aliases) with modifiers such as version or aut protocol'
+    description: 'list of sdk names (aliases) with modifiers such as version or aut protocol'
     required: true
   allow-modifiers:
     description: 'boolean value to allows use of modified sdks (e.g. wdio:cdp or selenium@3)'
