--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,42 +1,65 @@
-name: Coverage test a package
+name: Test SDKs
 
 on:
   workflow_dispatch:
     inputs:
-      name:
-        description: "name"
+      sdks:
+        description: "sdk names (aliases)"
         required: true
+      links:
+        description: "linked packages names"
+        default: "eyes-sdk-core"
+      linking-depth:
+        description: "linking depth"
+        default: 0
+      grep:
+        description: "grep patter"
+env:
+  CVG_TESTS_REMOTE: http://localhost:4444/wd/hub
+  APPLITOOLS_API_KEY_SDK: ${{secrets.APPLITOOLS_API_KEY_SDK}}
+  APPLITOOLS_API_KEY: ${{secrets.APPLITOOLS_API_KEY}}
+  APPLITOOLS_API_KEY_READ: ${{secrets.APPLITOOLS_API_KEY_READ}}
+  SAUCE_ACCESS_KEY: ${{secrets.SAUCE_ACCESS_KEY}}
+  SAUCE_USERNAME: ${{secrets.SAUCE_USERNAME}}
+  NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
+  AZURE_STORAGE_CONNECTION_STRING: ${{secrets.AZURE_STORAGE_CONNECTION_STRING}}
 jobs:
-  test:
+  setup:
+    name: Setup
     runs-on: ubuntu-latest
-    name: test ${{github.event.inputs.name}}
+    outputs:
+      matrix: ${{steps.setup.outputs.matrix}}
     steps:
       - uses: actions/checkout@v2
         with:
           fetch-depth: 0
+      - uses: ./.github/actions/setup-matrix
+        id: setup
+        with:
+          sdks: ${{github.event.inputs.sdks}}
+          allow-modifiers: true
+  test:
+    needs: setup
+    strategy:
+      matrix: ${{fromJSON(needs.setup.outputs.matrix)}}
+      fail-fast: false
+    name: ${{matrix.name}}
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+        name: Check-out repository
+        with:
+          fetch-depth: 0
       - uses: actions/setup-node@v1
+        name: Setup Node.js
         with:
           node-version: 14
-      - run: |
-          echo "::group::test ${{github.event.inputs.name}}"
-            cd "packages/${{github.event.inputs.name}}"
-            yarn
-            yarn prepublish:setup
-            yarn coverage:sandbox
-          echo "::endgroup::"
-      - uses: actions/upload-artifact@v2
+      - uses: ./.github/actions/coverage-tests
+        name: Run tests
         with:
-          name: coverage-tests-report
-          path: |
-            packages/${{github.event.inputs.name}}/coverage-tests-metadata.json
-            packages/${{github.event.inputs.name}}/coverage-test-report.xml
-    env:
-      CVG_TESTS_REMOTE: http://localhost:4444/wd/hub
-      APPLITOOLS_API_KEY_SDK: ${{secrets.APPLITOOLS_API_KEY_SDK}}
-      APPLITOOLS_API_KEY: ${{secrets.APPLITOOLS_API_KEY}}
-      APPLITOOLS_API_KEY_READ: ${{secrets.APPLITOOLS_API_KEY_READ}}
-      SAUCE_ACCESS_KEY: ${{secrets.SAUCE_ACCESS_KEY}}
-      SAUCE_USERNAME: ${{secrets.SAUCE_USERNAME}}
-      NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
-      AZURE_STORAGE_CONNECTION_STRING: ${{secrets.AZURE_STORAGE_CONNECTION_STRING}}
-      STDOUT_LEVEL: 1
+          sdk: ${{matrix.sdk}}
+          install: ${{matrix.install}}
+          links: ${{github.event.inputs.links}}
+          linking-depth: ${{github.event.inputs['linking-depth']}}
+          grep: ${{github.event.inputs.grep}}
+        env: ${{matrix.env}}
