--- a/packages/eyes-protractor/package.json
+++ b/packages/eyes-protractor/package.json
@@ -48,20 +48,20 @@
     "build": "yarn build:dist && yarn build:types",
     "build:dist": "tsc",
     "build:types": "api-extractor ./src/index.ts --out ./types/index.d.ts --external-modules protractor selenium-webdriver",
-    "test": "yarn build:dist && yarn test:it",
+    "generate:tests": "coverage-tests generate node_modules/@applitools/sdk-shared/coverage-tests/generic/index.js --name 'eyes-protractor'",
+    "test": "yarn build:dist && yarn test:it && yarn generate:tests && yarn test:coverage",
     "test:it": "mocha --timeout 120000 './test/it/**/*.spec.js'",
     "test:coverage": "APPLITOOLS_BATCH_NAME='JS Coverage Tests: eyes-protractor' APPLITOOLS_BATCH_ID=$(uuidgen) XUNIT_FILE=coverage-test-report.xml mocha --config .mocharc.cvg.js",
-    "coverage:generate": "coverage-tests generate node_modules/@applitools/sdk-shared/coverage-tests/generic/index.js --name 'eyes-protractor'",
-    "coverage:report": "coverage-tests report node_modules/@applitools/sdk-shared/coverage-tests/generic/index.js --name 'eyes-protractor'",
-    "coverage:sandbox": "yarn coverage:generate && yarn test:coverage && yarn coverage:report --sandbox",
-    "coverage:prod": "yarn coverage:generate && yarn test:coverage && yarn coverage:report",
+    "report": "coverage-tests report node_modules/@applitools/sdk-shared/coverage-tests/generic/index.js --name 'eyes-protractor'",
+    "setup": "yarn docker:setup",
     "docker:setup": "node ../sdk-shared/src/generate-docker-compose-config.js && docker-compose up -d",
     "docker:teardown": "docker-compose down",
-    "preversion": "bongo preversion && yarn build && yarn test",
-    "version": "bongo version",
-    "postversion": "bongo postversion",
     "deps": "bongo deps",
-    "prepublish:setup": "yarn docker:setup"
+    "gh:test": "gh workflow run test.yml -f sdks='protractor' -f links='eyes-sdk-core eyes-api utils visual-grid-client sdk-shared' -f linking-depth='1'",
+    "gh:publish": "gh workflow run publish.yml -f sdks='protractor'",
+    "preversion": "bongo preversion && yarn build",
+    "version": "bongo version",
+    "postversion": "bongo postversion"
   },
   "husky": {
     "hooks": {
