--- a/packages/eyes-protractor/package.json
+++ b/packages/eyes-protractor/package.json
@@ -49,9 +49,9 @@
     "build:dist": "tsc",
     "build:types": "api-extractor ./src/index.ts --out ./types/index.d.ts --external-modules protractor selenium-webdriver",
     "generate:tests": "coverage-tests generate node_modules/@applitools/sdk-shared/coverage-tests/generic/index.js --name 'eyes-protractor'",
-    "test": "yarn build:dist && yarn test:it && yarn generate:tests && yarn test:coverage",
+    "test": "yarn build:dist && yarn test:it && yarn test:coverage",
     "test:it": "mocha --timeout 120000 './test/it/**/*.spec.js'",
-    "test:coverage": "APPLITOOLS_BATCH_NAME='JS Coverage Tests: eyes-protractor' APPLITOOLS_BATCH_ID=$(uuidgen) XUNIT_FILE=coverage-test-report.xml mocha --config .mocharc.cvg.js",
+    "test:coverage": "yarn generate:tests && APPLITOOLS_BATCH_NAME='JS Coverage Tests: eyes-protractor' APPLITOOLS_BATCH_ID=$(uuidgen) XUNIT_FILE=coverage-test-report.xml mocha --config .mocharc.cvg.js",
     "report": "coverage-tests report node_modules/@applitools/sdk-shared/coverage-tests/generic/index.js --name 'eyes-protractor'",
     "setup": "yarn docker:setup",
     "docker:setup": "node ../sdk-shared/src/generate-docker-compose-config.js && docker-compose up -d",
