--- a/packages/eyes-webdriverio-5/package.json
+++ b/packages/eyes-webdriverio-5/package.json
@@ -47,24 +47,23 @@
     "build:tsconfig:5": "APPLITOOLS_WEBDRIVERIO_MAJOR_VERSION=5 tsconfig.js --once",
     "build:dist": "tsc",
     "build:types": "api-extractor ./src/index.ts --out ./types/index.d.ts --external-globals WebdriverIO Applitools",
-    "test": "yarn build:tsconfig && yarn build:dist && yarn test:it && yarn test:service",
+    "generate:tests": "coverage-tests generate node_modules/@applitools/sdk-shared/coverage-tests/generic/index.js --name 'eyes.webdriverio.javascript5'",
+    "test": "yarn build:tsconfig && yarn build:dist && yarn test:it && yarn test:service && yarn test:coverage",
     "test:it": "mocha --no-timeouts \"test/it/*.js\"",
     "test:service": "mocha ./test/service/unit/*.spec.js && wdio \"test/service/wdio.conf.js\" && wdio \"test/service/no-config/wdio.no-config.conf.js\" && wdio \"test/service/vg/wdio.vg.conf.js\"",
-    "test:coverage": "APPLITOOLS_BATCH_NAME='JS Coverage Tests: eyes-webdriverio-5' APPLITOOLS_BATCH_ID=$(uuidgen) XUNIT_FILE=coverage-test-report.xml mocha --config .mocharc.cvg.js",
+    "test:coverage": "yern generate:tests && APPLITOOLS_BATCH_NAME='JS Coverage Tests: eyes-webdriverio-5' APPLITOOLS_BATCH_ID=$(uuidgen) XUNIT_FILE=coverage-test-report.xml mocha --config .mocharc.cvg.js",
     "test:coverage:wd": "APPLITOOLS_WEBDRIVERIO_PROTOCOL=wd yarn test:coverage",
     "test:coverage:cdp": "APPLITOOLS_WEBDRIVERIO_PROTOCOL=cdp yarn test:coverage",
-    "coverage:generate": "coverage-tests generate node_modules/@applitools/sdk-shared/coverage-tests/generic/index.js --name 'eyes.webdriverio.javascript5'",
-    "coverage:report": "coverage-tests report node_modules/@applitools/sdk-shared/coverage-tests/generic/index.js --name 'eyes.webdriverio.javascript5'",
-    "coverage:sandbox": "yarn coverage:generate && yarn test:coverage && yarn coverage:report --sandbox",
-    "coverage:prod": "yarn coverage:generate && yarn test:coverage && yarn coverage:report",
-    "gh:coverage": "gh workflow run test-links.yml -f settings='wdio wdio:cdp wdio@6 wdio@5' -f links='eyes-sdk-core visual-grid-client eyes-api sdk-shared api-extractor'",
+    "report": "coverage-tests report node_modules/@applitools/sdk-shared/coverage-tests/generic/index.js --name 'eyes.webdriverio.javascript5'",
+    "setup": "yarn docker:setup",
     "docker:setup": "node ../sdk-shared/src/generate-docker-compose-config.js && docker-compose up -d",
     "docker:teardown": "docker-compose down",
-    "preversion": "bongo preversion && yarn build && yarn test && yarn coverage:prod",
-    "version": "bongo version",
-    "postversion": "bongo postversion",
     "deps": "bongo deps",
-    "prepublish:setup": "yarn docker:setup"
+    "gh:test": "gh workflow run test.yml -f sdks='wdio wdio:cdp wdio@6 wdio@5' -f links='eyes-sdk-core eyes-api utils visual-grid-client sdk-shared' -f linking-depth='1'",
+    "gh:publish": "gh workflow run publish.yml -f sdks='wdio'",
+    "preversion": "bongo preversion && yarn build",
+    "version": "bongo version",
+    "postversion": "bongo postversion"
   },
   "husky": {
     "hooks": {
